[tool.poetry]
name = "sustainability_impact_calculator"
version = "0.1.0"
description = ""
authors = ["Samuel Stegmeyer <samuel_stegmeyer@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
